# www-min

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  pyproject.toml  sample-config.toml  serve.py
src/wwwmin/: __main__.py  assets.py  config.py  database.py  emailing.py  github_webhook.py  links.py  operating_hours.py  security.py  server.py  submissions.py  webpush.py
src/wwwmin/static/: admin.js  closed.html  index.js  styles.css  worker.js
src/wwwmin/templates/: admin.html  base.html  closed.html  index.html  login.html
static/: index.js  styles.css
templates/: admin.html  base.html  index.html  login.html
tests/: test_basic.py  test_links.py  test_operating_hours.py  test_security.py  test_submissions.py  utils.py
