[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wwwmin"
version = "0.0.1-beta2"
description = "Frontend & backend for https://aidan.software"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE.txt"}
keywords = ["portfolio", "professional", "website"]
authors = [
  {name = "Aidan Courtney", email = "contact@aidan.software" }
]
dependencies = [
  "rich",
  "fastapi",
  "python-multipart",
  "uvicorn",
  "PyJWT",
  "argon2-cffi",
  "pywebpush",
  "py_vapid",
  "requests",
  "toml",
  "appdirs",
  "psutil",
  "cyclopts"
]

[project.optional-dependencies]
pysqlite3 = ["pysqlite3-binary"]
dev = ["pre-commit", "pyright", "ruff", "mypy", "types-requests", "types-toml"]
test = ["pytest", "coverage"]

[project.urls]
"Homepage" = "https://aidan.software"
"Source" = "https://github.com/aidaco/www-min/"

[project.scripts]
wwwmin = "wwwmin.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = 'py312'

[tool.pyright]
pythonVersion = '3.12'
